Added API call to retrieve devices by tag.
